# hello-note-tauri

./: .gitignore  README.MD  dev-server.js  package-lock.json  package.json  vite.config.js  新文件 2优化.css
.cargo/: config.toml
src/: index.html  main.js  milkdown_installation_guide.md  search.rs  styles.css  updated_theme_js.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: capabilities.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  file_watcher.rs  indexing_jobs.rs  main.rs  search.rs  search.rsbak  search_core.rs
src-tauri/src/commands/: favorites.rs  fs.rs  history.rs  links.rs  mod.rs  path_utils.rs  pins.rs  resource_manager.rs  screenshot.rs  search.rs  sync.rs  tags.rs  utils.rs  workspace.rs
src/css/: base.css  codemirror-theme.css  components.css  milkdown-theme.css  plugin-ui.css  themes.css  utils.css
src/js/: app.js  codemirror-editor.js  context-menu.js  dev-tools.js  dom-init.js  drag-drop.js  editor.js  file-change-listener.js  file-manager.js  graph.js  homepage.js  links.js  lru-cache.js  main.js  milkdown-editor.js  milkdown-linenumbers-plugin.js  milkdown-wikilink-plugin.js  outline.js  plugin-context.js  plugin-manager.js  search.js  sidebar-control.js  sidebar.js  tab_manager.js  tag_modal.js  theme.js  ui-utils.js  ui_actions.js  virtual-scroll.js  window-manager.js  workspace.js
src/js/core/: AppState.js  EventBus.js  TauriAPI.js
src/js/plugins/: milkdown-bold-syntax-plugin.js
src/js/plugins/screenshot/: annotate.html  index.js  manifest.json
srcbak/src-实现文件夹新建删除文件新建功能/: index.html  main.js  styles.css
