[package]
name = "cheetah-note"
version = "0.1.0"
description = "高性能 Markdown 笔记软件"
authors = ["CheetahNote Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.8.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.9"

[profile.dev]
# 开发模式：快速编译
opt-level = 0
debug = true
incremental = true

[profile.release]
# 发布模式：极致性能优化
panic = "abort"          # 减小二进制大小
codegen-units = 1        # 最大化优化
lto = true               # 链接时优化
opt-level = "z"          # 优化文件大小
strip = true             # 移除调试符号

[features]
default = []

# Windows 特定依赖
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation"] }
