[package]
name = "cheetah-note"
version = "0.1.0"
description = "高性能 Markdown 笔记软件"
authors = ["CheetahNote Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.8.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.9"

# Tantivy 相关依赖 - 修复版本
tantivy = "0.24.1"
tantivy-jieba = "0.12.0"
anyhow = "1.0"
once_cell = "1.19"

# 新增 SQLite 和连接池相关依赖
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"

chrono = "0.4"
regex = "1.10" # [新增] 添加 regex 库
pathdiff = "0.2" # [新增]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

walkdir = "2"
#内存通道，为异步索引准备
crossbeam-channel = "0.5"

# ⭐【新增】截图相关依赖
screenshots = "0.8"           # 跨平台截图库
base64 = "0.22"               # Base64 编码

[profile.dev]
# 开发模式：快速编译
opt-level = 0
debug = true
incremental = true

[profile.release]
# 发布模式：极致性能优化
panic = "abort"          # 减小二进制大小
codegen-units = 1        # 最大化优化
lto = true               # 链接时优化
opt-level = "z"          # 优化文件大小
strip = true             # 移除调试符号

[features]
default = []

# Windows 特定依赖
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation"] }
